# Termicomm

./: .gitignore  CMakeLists.txt  README.md  server.cpp  termicomm_server  termicomm_server.db
include/: base64.hpp
src/: main.cpp
src/ui/: renderer.hpp
